--- a/free-nodes/2025-8-9-free-high-speed-nodes.htm
+++ b/free-nodes/2025-8-9-free-high-speed-nodes.htm
@@ -352,6 +352,7 @@ A：立即通知服务商重置订阅 token 或账号密码，避免资源被滥
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-8-8-clash-v2ray-ss-ssr.htm">免费Clash SSR - 8月8日18.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-8-10-free-node-subscribe-links.htm">免费Clash SSR - 8月10日18.2M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -380,16 +381,16 @@ A：立即通知服务商重置订阅 token 或账号密码，避免资源被滥
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-free-high-speed-nodes.htm" title="免费Clash SSR - 7月23日19M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 7月23日19M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="免费Clash SSR - 8月6日20.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 8月6日20.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-node-share.htm" title="免费Clash SSR - 7月14日19.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月14日19.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-free-high-speed-nodes.htm" title="免费Clash SSR - 8月5日21.6M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 8月5日21.6M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-free-subscribe-node.htm" title="免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-31-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 7月31日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-free-v2ray.htm" title="免费Clash SSR - 7月6日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月6日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月2日19.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月2日19.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-high-speed-nodes.htm" title="免费Clash SSR - 8月9日18.7M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 8月9日18.7M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-28-free-subscribe-node.htm" title="免费Clash SSR - 7月28日22.5M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 7月28日22.5M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-21-node-share.htm" title="免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-7-free-v2ray.htm" title="免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月7日22.4M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-subscribe-node.htm" title="免费Clash SSR - 8月14日20.1M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 8月14日20.1M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-node-share.htm" title="免费Clash SSR - 7月24日19.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月24日19.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-high-speed-nodes.htm" title="免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月20日22.5M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -401,7 +402,7 @@ A：立即通知服务商重置订阅 token 或账号密码，避免资源被滥
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
